images url updated

--- a/email.html
+++ b/email.html
@@ -11,7 +11,7 @@
       <div class="email__box">
         <!-- content upper session with white background -->
         <div class="email__content__upper">
-          <img src="/email__logo.png" alt="{email.title}" />
+          <img src="https://static-tingo-images.s3.amazonaws.com/email__logo.png" alt="{email.title}" />
 
           <!-- inner content -->
           <div class="email__inner__content">
@@ -31,8 +31,8 @@
         <div class="email__content__lower">
           <p>TingoPay at the touch of a button! Download our app for</p>
           <div class="download">
-            <img src="/apple.svg" alt="" />
-            <img src="/google.svg" alt="" />
+            <img src="https://static-tingo-images.s3.amazonaws.com/apple.svg" alt="" />
+            <img src="https://static-tingo-images.s3.amazonaws.com/google.svg" alt="" />
           </div>
           <p>
             Questions or concerns? Get in touch with us at info@tingopay.com or
